FUFB-120 Added behavior and styling for Image with Text section. Populated Image with Text sections on Homepage and Homepage Alternate. Fixed spacing in schema of other sections to match.

--- a/sites/_shared/assets/section-image-with-text.css
+++ b/sites/_shared/assets/section-image-with-text.css
@@ -18,16 +18,11 @@
 }
 
 .image-with-text--none {
-  margin: 3.5rem auto 0;
-  padding: 0 0 3.5rem;
+  margin: 0 auto;
+  padding: 0;
 }
 
 @media screen and (min-width: 750px) {
-  .image-with-text--none {
-    margin: 0;
-    padding: 0;
-  }
-
   .image-with-text.image-with-text--none .grid--2-col-tablet .grid__item {
     max-width: 50%;
   }
@@ -47,8 +42,8 @@
   margin: 0;
 }
 
-.category-landing .image-with-text__content {
-  justify-content: center;
+.image-with-text__media > img {
+  height: 100% !important;
 }
 
 @media screen and (min-width: 750px) {
@@ -61,21 +56,16 @@
   .image-with-text__grid--reverse-mobile {
     flex-direction: column-reverse;
   }
-
-  .category-landing .image-with-text__content {
-    padding: 5rem 2rem;
-  }
 }
 
 .image-with-text__media-item--small {
-  max-width: 14.5rem !important;
   margin: 0 auto;
 }
 
 @media screen and (min-width: 750px) {
   .image-with-text__media-item--small {
     max-width: 42rem !important;
-    margin: 0 auto;
+    margin: 6rem 0 7rem 4rem;
   }
 }
 
@@ -137,7 +127,7 @@
 }
 
 .image-with-text--none .image-with-text__content {
-  padding: 3rem 2rem;
+  padding: 3rem 2rem 4rem;
 }
 
 .image-with-text__content--mobile-right > * {
@@ -232,13 +222,13 @@
 @media screen and (min-width: 990px) {
   .image-with-text__content,
   .image-with-text--none .image-with-text__content {
-    padding: 6rem 4rem 7rem;
+    padding: 6rem 5rem 7rem;
   }
 }
 
 @media screen and (min-width: 749px) and (max-width: 989px) {
   .image-with-text--none .image-with-text__content {
-    padding: 6rem 4rem 7rem;
+    padding: 6rem 5rem 7rem;
   }
 }
 
@@ -264,7 +254,14 @@
 
 .image-with-text__content > * + .image-with-text__text,
 .image-with-text__content .button + .image-with-text__text {
-  margin-top: 1rem;
+  margin-top: 0;
+}
+
+@media screen and (min-width: 750px) {
+  .image-with-text__content > * + .image-with-text__text,
+  .image-with-text__content .button + .image-with-text__text {
+    margin-top: 1rem;
+  }
 }
 
 .image-with-text__content .image-with-text__text + .button {
@@ -272,9 +269,10 @@
   padding: 0;
 }
 
-.image-with-text__eyebrow {
-  font-size: 1.8rem;
-  line-height: 2.2rem;
+@media screen and (min-width: 750px) {
+  .image-with-text__eyebrow {
+    margin-bottom: 1rem;
+  }
 }
 
 .image-with-text__heading {
@@ -284,8 +282,67 @@
 }
 
 .image-with-text__text p {
-  margin-top: 0;
-  margin-bottom: 1rem;
+  margin: 0 auto 1rem;
+  font-size: inherit;
+  font-weight: inherit;
+  line-height: inherit;
+  letter-spacing: inherit;
+}
+
+.image-with-text__button-wrapper {
+  margin-top: 1.75rem;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+}
+
+.image-with-text__button {
+  display: inline-flex;
+  flex-wrap: wrap;
+  min-width: 25.5rem;
+  max-width: 45rem;
+  min-height: 5rem;
+  word-break: break-word;
+  max-width: fit-content;
+}
+
+.image-with-text__button.button--link-1,
+.image-with-text__button.button--link-1-dark,
+.image-with-text__button.button--link-2,
+.image-with-text__button.button--link-2-dark {
+  min-height: initial;
+}
+
+.image-with-text__button-wrapper .image-with-text__button + .image-with-text__button {
+  margin: 2rem 0 0;
+}
+
+.image-with-text__button-wrapper .image-with-text__button + .image-with-text__button.button--link-1,
+.image-with-text__button-wrapper .image-with-text__button + .image-with-text__button.button--link-1-dark,
+.image-with-text__button-wrapper .image-with-text__button + .image-with-text__button.button--link-2,
+.image-with-text__button-wrapper .image-with-text__button + .image-with-text__button.button--link-2-dark {
+  margin: 1rem 0 0;
+}
+
+.image-with-text__button-wrapper.side-by-side .image-with-text__button + .image-with-text__button {
+  margin: 0 0 0 2rem;
+}
+
+.image-with-text__button-wrapper.side-by-side .image-with-text__button-separator {
+  margin: 0 2rem;
+}
+
+/* Category Landing */
+
+.category-landing .image-with-text__content {
+  justify-content: center;
+}
+
+@media screen and (max-width: 749px) {
+  .category-landing .image-with-text__content {
+    padding: 5rem 2rem;
+  }
 }
 
 .category-landing .image-with-text {
